k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: blog-app
  labels:
    name: blog-app
