k8s/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      serviceAccountName: blog-app-sa
      containers:
        - name: go-app-container
          image: esraa114/blog-app-backend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000

          volumeMounts:
            - name: secret-volume
              mountPath: /run/secrets/db-password # ← Mount ONLY the file!
              subPath: db-password # ← Key from the secret
              readOnly: true
      volumes:
        - name: secret-volume
          secret:
            secretName: db-secret
