k8s/proxy_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  labels:
    app: proxy
  namespace: blog-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
            - name: tls-secret-volume
              mountPath: /etc/nginx/ssl
              readOnly: true
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
        - name: tls-secret-volume
          secret:
            secretName: tls-secret
