k8s/backend_service.yaml
# backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: blog-app
spec:
  type: ClusterIP
  selector:
    app: go-app  
  ports:
  - port: 8000
    targetPort: 8000
