k8s/proxy_nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
  labels:
    app: proxy
  namespace: blog-app
spec:
  type: NodePort  
  selector:
    app: proxy  
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30081  
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
    nodePort: 30444
